--- a/env/requirements.yaml
+++ b/env/requirements.yaml
@@ -25,6 +25,9 @@ dependencies:
 - name: voting-app-worker-java
   repository: http://jenkins-x-chartmuseum:8080
   version: 1.0.5
+- name: voting-app-worker-java-2stateful
+  repository: http://jenkins-x-chartmuseum:8080
+  version: 1.0.0
 - name: voting-app-worker-java-stateful
   repository: http://jenkins-x-chartmuseum:8080
   version: 1.0.2
