--- a/env/requirements.yaml
+++ b/env/requirements.yaml
@@ -22,6 +22,9 @@ dependencies:
 - name: voting-app-vote-python
   repository: http://jenkins-x-chartmuseum:8080
   version: 0.0.1
+- name: voting-app-worker-java-2stateful
+  repository: http://jenkins-x-chartmuseum:8080
+  version: 1.0.0
 - name: voting-app-worker-java-stateful
   repository: http://jenkins-x-chartmuseum:8080
   version: 1.0.2
